# gds-idea-pkg-tf

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  release.yml
src/tf/: __init__.py  cli.py  prerequisites.py  tf.py
tests/: conftest.py  test_example.py
