[project]
name = "gds-idea-pkg-tf"
description = "TODO: add description"
readme = "README.md"
authors = [
    { name = "Jarek-Rolski", email = "jaroslaw.rolski@yahoo.com" }
]
requires-python = ">=3.11"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/tf/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tf"]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = ["src/tf/_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.ruff.lint.isort]
known-first-party = ["tf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
markers = ["integration: tests that require external services"]


[tool.gds-idea-app-kit]
framework = "python"
app_name = "tf"
tool_version = "0.5.3"

[tool.gds-idea-app-kit.files]
LICENCE = "sha256:21cc325b3181cb748845827425d37ce04b3dc563835bbf50fafbc56a5eb68c48"
".github/CODEOWNERS" = "sha256:464aa53eb8be8c9b61185674b4dabec6cacbafa904aa48b46facdcd9a18e1fc5"
".github/workflows/ci.yml" = "sha256:baed13493483724c4f2cdec0df9d378dfc2f8df8a0f01bfb65a108c9d7af3d29"
".github/dependabot.yml" = "sha256:8472c537c3808394c9200ac7f67e61ce565981583c6f7f381339f1df255fb318"
".pre-commit-config.yaml" = "sha256:376617ea56a3e3b6691e423e33c1faeff299e95205c54208bbd3b3a5c619bd57"
".github/workflows/release.yml" = "sha256:9f0252542002155aa15a6811081f44111a1b9b35129dafee159b85a97071172c"
[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]
